--- a/public/reg.html
+++ b/public/reg.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini POS</title>
+    <title>Register</title>
 </head>
 <body>
-    <h1>Welcome to Mini POS</h1>
+    <h1>Register</h1>
     <div class="card">
-        <form action="/login" method="POST">
+        <form action="/register" method="POST">
             <div class="input-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
@@ -17,8 +17,8 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">Login</button>
-            <button type="button" onclick="window.location.href='/reg.html'">Register</button>
+            <button type="submit">Register</button>
+            <button type="button" onclick="window.location.href='/'">Back to Login</button>
         </form>
     </div>
 </body>
