--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to Mini POS</h1>
     <div class="card">
-        <form action="/login" method="POST">
+        <form action="/api/users/login" method="POST">
             <div class="username-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
