--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,15 @@
         <h1>Welcome to Mini POS</h1>
         <button type="submit" onclick="window.location.href='login.html'">Dashboard</button>
     </header>
+    <div class="container">
+        <div class="products-sale">
+            <h1>Product Sale</h1>
+            <div class="products-sale-list">
+                <div>
+                    <h3>Food</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
