--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,21 @@
         <div class="products-sale">
             <h1>Product Sale</h1>
             <div class="products-sale-list">
-                <div>
-                    <h3>Food</h3>
+                <div class="category">
+                    Food
+                </div>
+                <div class="product-list">
+                    <div class="product">
+                        <div class="title">
+                            <div>ProductName</div>
+                            <div>฿100</div>
+                        </div>
+                        <div class="product-actions">
+                            <button class="product-btn">-</button>
+                            <span class="product-qty">0</span>
+                            <button class="product-btn">+</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
