--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POS</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="cssfile/sales.css">
 </head>
 <body>
     <header>
