--- a/public/user.html
+++ b/public/user.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashbord</title>
+    <title>User</title>
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 <body>
     <header class = "Dashboard-header">
