--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Welcome to Mini POS</h1>
-        <button type="submit" onclick="window.location.href='login.html'">Dashboard</button>
+        <button type="submit" onclick="window.location.href='dashboard.html'">Dashboard</button>
     </header>
     <div class="container">
         <div class="products-sale">
